// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots drawer controlled: external state 1`] = `
<div
  style={
    Object {
      "padding": 48,
    }
  }
>
  <button
    onClick={[Function]}
  >
    open
  </button>
  <button
    onClick={[Function]}
  >
    close
  </button>
  <div
    aria-expanded={false}
    data-css-1suuvy1=""
    onClick={[Function]}
    role="button"
  >
    <p
      data-css-17nixd9=""
      style={
        Object {
          "margin": 0,
          "padding": "10px 0",
        }
      }
    >
      Click me to open
    </p>
    <div
      data-css-17v14zz=""
    >
      <div
        data-css-1h00rme=""
        data-css-7dab2f=""
      >
        <svg
          aria-label="caret down icon"
          role="img"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 15.41l-5-5L8.41 9 12 12.58 15.59 9 17 10.41"
          />
        </svg>
      </div>
      <div
        data-css-6wu9td=""
      >
        Collapsed
      </div>
    </div>
  </div>
  <div
    aria-hidden={true}
    data-css-1s813js=""
  >
    <p
      data-css-17nixd9=""
      style={
        Object {
          "margin": 0,
          "padding": 20,
        }
      }
    >
      Drawer Content here
    </p>
  </div>
</div>
`;

exports[`Storyshots drawer controlled: open with button only 1`] = `
<div
  style={
    Object {
      "padding": 48,
    }
  }
>
  <button
    onClick={[Function]}
  >
    toggle drawer
  </button>
  <div
    aria-expanded={false}
    data-css-1suuvy1=""
    onClick={[Function]}
    role="button"
  >
    <p
      data-css-17nixd9=""
      style={
        Object {
          "margin": 0,
          "padding": "10px 0",
        }
      }
    >
      Clicking me won't toggle drawer
    </p>
    <div
      data-css-17v14zz=""
    >
      <div
        data-css-1h00rme=""
        data-css-7dab2f=""
      >
        <svg
          aria-label="caret down icon"
          role="img"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 15.41l-5-5L8.41 9 12 12.58 15.59 9 17 10.41"
          />
        </svg>
      </div>
      <div
        data-css-6wu9td=""
      >
        Collapsed
      </div>
    </div>
  </div>
  <div
    aria-hidden={true}
    data-css-1s813js=""
  >
    <p
      data-css-17nixd9=""
      style={
        Object {
          "margin": 0,
          "padding": 20,
        }
      }
    >
      Drawer Content here
    </p>
  </div>
</div>
`;

exports[`Storyshots drawer controlled: start open 1`] = `
<div
  style={
    Object {
      "padding": 48,
    }
  }
>
  <div
    aria-expanded={true}
    data-css-1u3wau6=""
    onClick={[Function]}
    role="button"
  >
    <p
      data-css-17nixd9=""
      style={
        Object {
          "margin": 0,
          "padding": "10px 0",
        }
      }
    >
      Click me to open
    </p>
    <div
      data-css-17v14zz=""
    >
      <div
        data-css-7dab2f=""
        data-css-ns6sfg=""
      >
        <svg
          aria-label="caret down icon"
          role="img"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 15.41l-5-5L8.41 9 12 12.58 15.59 9 17 10.41"
          />
        </svg>
      </div>
      <div
        data-css-6wu9td=""
      >
        Expanded
      </div>
    </div>
  </div>
  <div
    aria-hidden={false}
    data-css-1s813js=""
  >
    <p
      data-css-17nixd9=""
      style={
        Object {
          "margin": 0,
          "padding": 20,
        }
      }
    >
      Drawer Content here
    </p>
  </div>
</div>
`;

exports[`Storyshots drawer default 1`] = `
<div
  style={
    Object {
      "padding": 48,
    }
  }
>
  <div
    aria-expanded={false}
    data-css-1suuvy1=""
    onClick={[Function]}
    role="button"
  >
    <p
      data-css-17nixd9=""
      style={
        Object {
          "margin": 0,
          "padding": "10px 0",
        }
      }
    >
      Click me to open
    </p>
    <div
      data-css-17v14zz=""
    >
      <div
        data-css-1h00rme=""
        data-css-7dab2f=""
      >
        <svg
          aria-label="caret down icon"
          role="img"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 15.41l-5-5L8.41 9 12 12.58 15.59 9 17 10.41"
          />
        </svg>
      </div>
      <div
        data-css-6wu9td=""
      >
        Collapsed
      </div>
    </div>
  </div>
  <div
    aria-hidden={true}
    data-css-1s813js=""
  >
    <p
      data-css-17nixd9=""
      style={
        Object {
          "margin": 0,
          "padding": 20,
        }
      }
    >
      This year’s spring releases of Safari 13.1 for macOS Catalina, iPadOS, iOS, and watchOS bring a tremendous number of WebKit improvements for the web across Apple’s platforms. All of this with many more updates for improved privacy, performance, and a host of new tools for web developers. Here’s a quick look at the new WebKit enhancements available with these releases. Pointer and Mouse Events on iPadOS The latest iPadOS 13.4 brings desktop-class pointer and mouse event support to Safari and WebKit. To ensure the best experience, web developers can use feature detection and adopt Pointer Events. Since a mouse or trackpad won’t send touch events, web content should not depend on touch events. Pointer Events will specify whether a mouse/trackpad or touch generated the event. Web Animations API These releases ship with support for the Web Animations API, a web standard offering developers a JavaScript API to create, query, and control animations, including direct control of CSS Animations and CSS Transitions. It offers a convenient unified model for programmatic animations, CSS Animations and Transitions. They can all now be directly controlled to pause, resume, seek, or change speed and direction, with less manual calculation. In addition, Web Inspector has been updated to show entries for them in the Media and Animations timeline.
    </p>
  </div>
</div>
`;

exports[`Storyshots drawer row component with actions 1`] = `
<div
  style={
    Object {
      "padding": 48,
    }
  }
>
  <div
    aria-expanded={false}
    data-css-1suuvy1=""
    onClick={[Function]}
    role="button"
  >
    <div
      data-css-19vzw9x=""
    >
      <div
        data-css-js3ti3=""
      >
        <span
          data-css-15yq56v=""
        >
          <a
            href="https://duckduckgo.com?q=image"
          >
            <img
              src="https://cataas.com/cat"
            />
          </a>
        </span>
        <div
          data-css-1gtggsm=""
        >
          <span
            data-css-1fxa3fl=""
            onBlur={[Function]}
            onFocus={[Function]}
          >
            <a
              href="https://duckduckgo.com?q=overlay"
            >
              Overlay
            </a>
          </span>
        </div>
      </div>
      <div
        data-css-kxulf3=""
      >
        <div
          data-css-2pesz8=""
        >
          <span
            data-css-1bnk4mn=""
          >
            <a
              href="https://duckduckgo.com?q=title"
            >
              I'm a Row with Actions
            </a>
          </span>
        </div>
        <div
          data-css-1f22p8h=""
        >
          <span
            data-css-1kcrbi9=""
          >
            <span
              data-css-1bnk4mn=""
            >
              <a
                href="https://duckduckgo.com?q=cats"
              >
                Kitten McCatbuns
              </a>
            </span>
          </span>
          <span
            aria-hidden={true}
            data-css-kykfz1=""
          >
            ·
          </span>
          <span
            data-css-1kcrbi9=""
          >
            23 hours of cuteness
          </span>
        </div>
      </div>
      <div
        data-css-7b22zo=""
      >
        <button
          data-css-1w9jmcf=""
          disabled={false}
          onClick={[Function]}
          style={Object {}}
        >
          <div
            data-css-y80vay=""
          >
            <div
              data-css-7dab2f=""
            >
              <svg
                aria-label="more icon"
                role="img"
                viewBox="0 0 24 24"
              >
                <path
                  d="M6 14.5a2 2 0 110-4 2 2 0 010 4zm12 0a2 2 0 110-4 2 2 0 010 4zm-6 0a2 2 0 110-4 2 2 0 010 4z"
                />
              </svg>
            </div>
          </div>
          <span
            data-css-15b13by=""
          />
        </button>
      </div>
    </div>
    <div
      data-css-17v14zz=""
    >
      <div
        data-css-1h00rme=""
        data-css-7dab2f=""
      >
        <svg
          aria-label="caret down icon"
          role="img"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 15.41l-5-5L8.41 9 12 12.58 15.59 9 17 10.41"
          />
        </svg>
      </div>
      <div
        data-css-6wu9td=""
      >
        Collapsed
      </div>
    </div>
  </div>
  <div
    aria-hidden={true}
    data-css-1s813js=""
  >
    <p
      data-css-17nixd9=""
      style={
        Object {
          "margin": 0,
          "padding": 20,
        }
      }
    >
      Drawer Content here
    </p>
  </div>
</div>
`;

exports[`Storyshots drawer stack of drawers 1`] = `
<div
  style={
    Object {
      "padding": 48,
    }
  }
>
  <div>
    <div
      aria-expanded={false}
      data-css-1suuvy1=""
      onClick={[Function]}
      role="button"
    >
      <p
        data-css-17nixd9=""
        style={
          Object {
            "margin": 0,
            "padding": "10px 0",
          }
        }
      >
        The Drawer #1
      </p>
      <div
        data-css-17v14zz=""
      >
        <div
          data-css-1h00rme=""
          data-css-7dab2f=""
        >
          <svg
            aria-label="caret down icon"
            role="img"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 15.41l-5-5L8.41 9 12 12.58 15.59 9 17 10.41"
            />
          </svg>
        </div>
        <div
          data-css-6wu9td=""
        >
          Collapsed
        </div>
      </div>
    </div>
    <div
      aria-hidden={true}
      data-css-1s813js=""
    >
      <p
        data-css-17nixd9=""
        style={
          Object {
            "margin": 0,
            "padding": 20,
          }
        }
      >
        Drawer Content here
      </p>
    </div>
    <div
      aria-expanded={false}
      data-css-1suuvy1=""
      onClick={[Function]}
      role="button"
    >
      <p
        data-css-17nixd9=""
        style={
          Object {
            "margin": 0,
            "padding": "10px 0",
          }
        }
      >
        The Drawer #2
      </p>
      <div
        data-css-17v14zz=""
      >
        <div
          data-css-1h00rme=""
          data-css-7dab2f=""
        >
          <svg
            aria-label="caret down icon"
            role="img"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 15.41l-5-5L8.41 9 12 12.58 15.59 9 17 10.41"
            />
          </svg>
        </div>
        <div
          data-css-6wu9td=""
        >
          Collapsed
        </div>
      </div>
    </div>
    <div
      aria-hidden={true}
      data-css-1s813js=""
    >
      <p
        data-css-17nixd9=""
        style={
          Object {
            "margin": 0,
            "padding": 20,
          }
        }
      >
        Drawer Content here
      </p>
    </div>
    <div
      aria-expanded={false}
      data-css-1suuvy1=""
      onClick={[Function]}
      role="button"
    >
      <p
        data-css-17nixd9=""
        style={
          Object {
            "margin": 0,
            "padding": "10px 0",
          }
        }
      >
        The Drawer #1
      </p>
      <div
        data-css-17v14zz=""
      >
        <div
          data-css-1h00rme=""
          data-css-7dab2f=""
        >
          <svg
            aria-label="caret down icon"
            role="img"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 15.41l-5-5L8.41 9 12 12.58 15.59 9 17 10.41"
            />
          </svg>
        </div>
        <div
          data-css-6wu9td=""
        >
          Collapsed
        </div>
      </div>
    </div>
    <div
      aria-hidden={true}
      data-css-1s813js=""
    >
      <p
        data-css-17nixd9=""
        style={
          Object {
            "margin": 0,
            "padding": 20,
          }
        }
      >
        Drawer Content here
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots drawer stack of non-sibling drawers 1`] = `
<div
  style={
    Object {
      "padding": 48,
    }
  }
>
  <div>
    <div
      aria-expanded={false}
      data-css-1suuvy1=""
      onClick={[Function]}
      role="button"
    >
      <p
        data-css-17nixd9=""
        style={
          Object {
            "margin": 0,
            "padding": "10px 0",
          }
        }
      >
        The Drawer #1
      </p>
      <div
        data-css-17v14zz=""
      >
        <div
          data-css-1h00rme=""
          data-css-7dab2f=""
        >
          <svg
            aria-label="caret down icon"
            role="img"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 15.41l-5-5L8.41 9 12 12.58 15.59 9 17 10.41"
            />
          </svg>
        </div>
        <div
          data-css-6wu9td=""
        >
          Collapsed
        </div>
      </div>
    </div>
    <div
      aria-hidden={true}
      data-css-1s813js=""
    >
      <p
        data-css-17nixd9=""
        style={
          Object {
            "margin": 0,
            "padding": 20,
          }
        }
      >
        Drawer Content here
      </p>
    </div>
  </div>
  <div>
    <div
      aria-expanded={false}
      data-css-1suuvy1=""
      onClick={[Function]}
      role="button"
    >
      <p
        data-css-17nixd9=""
        style={
          Object {
            "margin": 0,
            "padding": "10px 0",
          }
        }
      >
        The Drawer #2
      </p>
      <div
        data-css-17v14zz=""
      >
        <div
          data-css-1h00rme=""
          data-css-7dab2f=""
        >
          <svg
            aria-label="caret down icon"
            role="img"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 15.41l-5-5L8.41 9 12 12.58 15.59 9 17 10.41"
            />
          </svg>
        </div>
        <div
          data-css-6wu9td=""
        >
          Collapsed
        </div>
      </div>
    </div>
    <div
      aria-hidden={true}
      data-css-1s813js=""
    >
      <p
        data-css-17nixd9=""
        style={
          Object {
            "margin": 0,
            "padding": 20,
          }
        }
      >
        Drawer Content here
      </p>
    </div>
  </div>
  <div>
    <div
      aria-expanded={false}
      data-css-1suuvy1=""
      onClick={[Function]}
      role="button"
    >
      <p
        data-css-17nixd9=""
        style={
          Object {
            "margin": 0,
            "padding": "10px 0",
          }
        }
      >
        The Drawer #3
      </p>
      <div
        data-css-17v14zz=""
      >
        <div
          data-css-1h00rme=""
          data-css-7dab2f=""
        >
          <svg
            aria-label="caret down icon"
            role="img"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 15.41l-5-5L8.41 9 12 12.58 15.59 9 17 10.41"
            />
          </svg>
        </div>
        <div
          data-css-6wu9td=""
        >
          Collapsed
        </div>
      </div>
    </div>
    <div
      aria-hidden={true}
      data-css-1s813js=""
    >
      <p
        data-css-17nixd9=""
        style={
          Object {
            "margin": 0,
            "padding": 20,
          }
        }
      >
        Drawer Content here
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots drawer using custom aria label 1`] = `
<div
  style={
    Object {
      "padding": 48,
    }
  }
>
  <div
    aria-expanded={false}
    aria-label="custom drawer header"
    data-css-1suuvy1=""
    onClick={[Function]}
    role="button"
  >
    <p
      data-css-17nixd9=""
      style={
        Object {
          "margin": 0,
          "padding": "10px 0",
        }
      }
    >
      The Drawer
    </p>
    <div
      data-css-17v14zz=""
    >
      <div
        data-css-1h00rme=""
        data-css-7dab2f=""
      >
        <svg
          aria-label="caret down icon"
          role="img"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 15.41l-5-5L8.41 9 12 12.58 15.59 9 17 10.41"
          />
        </svg>
      </div>
      <div
        data-css-6wu9td=""
      >
        Collapsed
      </div>
    </div>
  </div>
  <div
    aria-hidden={true}
    aria-label="custom drawer body"
    data-css-1s813js=""
  >
    <p
      data-css-17nixd9=""
      style={
        Object {
          "margin": 0,
          "padding": 20,
        }
      }
    >
      Drawer Content here
    </p>
  </div>
</div>
`;

exports[`Storyshots drawer with row component 1`] = `
<div
  style={
    Object {
      "padding": 48,
    }
  }
>
  <div
    aria-expanded={false}
    data-css-1suuvy1=""
    onClick={[Function]}
    role="button"
  >
    <div
      data-css-19vzw9x=""
    >
      <div
        data-css-js3ti3=""
      >
        <div
          data-css-y8jh93=""
        />
      </div>
      <div
        data-css-kxulf3=""
      >
        <div
          data-css-2pesz8=""
        >
          Look at me! I'm a &lt;Row /&gt;!
        </div>
        <div
          data-css-1f22p8h=""
        >
          <span
            data-css-1kcrbi9=""
          >
            Kitten McCatbuns
          </span>
          <span
            aria-hidden={true}
            data-css-kykfz1=""
          >
            ·
          </span>
          <span
            data-css-1kcrbi9=""
          >
            23 hours of cuteness
          </span>
        </div>
      </div>
      <div
        data-css-7zyoug=""
      >
        <button
          data-css-1w9jmcf=""
          disabled={false}
          style={Object {}}
        >
          <div
            data-css-y80vay=""
          >
            <div
              data-css-7dab2f=""
            >
              <svg
                aria-label="more icon"
                role="img"
                viewBox="0 0 24 24"
              >
                <path
                  d="M6 14.5a2 2 0 110-4 2 2 0 010 4zm12 0a2 2 0 110-4 2 2 0 010 4zm-6 0a2 2 0 110-4 2 2 0 010 4z"
                />
              </svg>
            </div>
          </div>
          <span
            data-css-15b13by=""
          />
        </button>
      </div>
    </div>
    <div
      data-css-17v14zz=""
    >
      <div
        data-css-1h00rme=""
        data-css-7dab2f=""
      >
        <svg
          aria-label="caret down icon"
          role="img"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 15.41l-5-5L8.41 9 12 12.58 15.59 9 17 10.41"
          />
        </svg>
      </div>
      <div
        data-css-6wu9td=""
      >
        Collapsed
      </div>
    </div>
  </div>
  <div
    aria-hidden={true}
    data-css-1s813js=""
  >
    <p
      data-css-17nixd9=""
      style={
        Object {
          "margin": 0,
          "padding": 20,
        }
      }
    >
      Drawer Content here
    </p>
  </div>
</div>
`;
